# ChangeLog for virtual/perl-Storable
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Storable/ChangeLog,v 1.20 2009/03/13 21:46:23 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -perl-Storable-2.07.ebuild,
  -perl-Storable-2.15.ebuild:
  Cleanup

  22 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  perl-Storable-2.16.ebuild:
  remove x86-fbsd keyword from old version as we have no provider for this
  version but newer ones are ok

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> perl-Storable-2.18.ebuild:
  alpha/ia64/sparc/x86 stable

  07 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  perl-Storable-2.18.ebuild:
  keyword ~sparc-fbsd

*perl-Storable-2.18 (21 May 2008)

  21 May 2008; Torsten Veller <tove@gentoo.org> +perl-Storable-2.18.ebuild:
  Version bump

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org> perl-Storable-2.16.ebuild:
  Stable for HPPA too.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> perl-Storable-2.16.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> perl-Storable-2.16.ebuild:
  amd64 stable

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> perl-Storable-2.16.ebuild:
  Stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-Storable-2.16.ebuild:
  Stable on ppc.

  10 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  perl-Storable-2.16.ebuild:
  Keywording to match virtual to real packages

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> perl-Storable-2.16.ebuild:
  alpha/ia64/x86 stable

*perl-Storable-2.16 (16 Apr 2007)

  16 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +perl-Storable-2.16.ebuild:
  Version bump

  25 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  -perl-Storable-2.13.ebuild:
  Cleaning up ebuilds

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  perl-Storable-2.15.ebuild:
  Add ~x86-fbsd keyword.

  26 Feb 2006; Joshua Kinard <kumba@gentoo.org> perl-Storable-2.15.ebuild: