@@ -1,4 +1,5 @@
 EBUILD perl-Storable-2.16.ebuild 492 RMD160 aaae1e0059c22760f67ee7340bbc5ef83c0ebd9f SHA1 2f2971778b8704e02adf3db300c2b43e6ef5cf05 SHA256 d3820ba7c89c99238fe9e30d8efd855e47ecfddd830431b2c71f18db725eefb6
 EBUILD perl-Storable-2.18.ebuild 515 RMD160 96324692a76fadf335dca81023c2b0fb99f7523f SHA1 aa8d20fa29c5c7f2cb3b5814360d30a716f7d2e8 SHA256 caf33ed0e43d44cc8fae1e3231b97fc7a152143fe05d214ce6e4958a96912031
-MISC ChangeLog 2548 RMD160 c7c7f6fee3909387ca6b8e4f441469e2972ab8ce SHA1 a275b35838e496c9ec3a0a220720e78478c76240 SHA256 616f22ddcc371b66975b8c4a617c692d78f77a7399adfb079403589843a89402
+EBUILD perl-Storable-2.20.ebuild 513 RMD160 c467c0867a63b1a9f1a37df451f69d11c08b2b76 SHA1 eaf41e1a7075465aecd98ea3728b89778b83b7b7 SHA256 1a29e1ee369abe759e03ced05826181401156d05e45ecf1e21a9e5dc685c20e4
+MISC ChangeLog 2675 RMD160 6e194c5c7259be6e31fd5aab515af52c273f6358 SHA1 5e6426daf64305d196ed85ab8153ba554ef420b5 SHA256 6dbcc7c40cc4e4b4f5c5331152a06673a5d73671912405b27314db71e8746171
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
