@@ -1,6 +1,11 @@
 # ChangeLog for virtual/perl-Storable
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Storable/ChangeLog,v 1.20 2009/03/13 21:46:23 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Storable/ChangeLog,v 1.21 2009/05/19 05:17:05 tove Exp $
+
+*perl-Storable-2.20 (19 May 2009)
+
+  19 May 2009; Torsten Veller <tove@gentoo.org> +perl-Storable-2.20.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -perl-Storable-2.07.ebuild,
   -perl-Storable-2.15.ebuild:
